<resources>
    <string name="app_name">Toasty Numbers Challenge</string>
    <string name="button_statistic">STATISTICS</string>
    <string name="button_custom">CUSTOM</string>
    <string name="button_endless">ENDLESS</string>
    <string name="button_play">PLAY</string>
    <string name="ticker_result">144</string>
    <string name="ticker_one">12</string>
    <string name="ticker_operator">×</string>
    <string name="ticker_two">12</string>
    <string name="equals">=</string>
    <string name="button_setting">SETTINGS</string>
    <string name="logo">A slice of toast</string>
    <string name="back">A back arrow</string>
    <string name="email">Logged in as:</string>
    <string name="button_sign_out">SIGN OUT</string>
    <string name="streak_details">5</string>
    <string name="streak">Highest Streak:</string>
    <string name="accuracy_details">98%</string>
    <string name="accuracy">Total Accuracy:</string>
    <string name="incorrect_details">5</string>
    <string name="incorrect">Questions Incorrect:</string>
    <string name="correct_details">245</string>
    <string name="correct">Questions Correct:</string>
    <string name="questions_details">250</string>
    <string name="questions">Total Questions</string>
    <string name="time_details">08:02:54</string>
    <string name="time">Total Time:</string>
    <string name="button_sign_in">SIGN IN</string>
    <string name="button_register">REGISTER</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="auto_answer">Auto Answer</string>
    <string name="auto_answer_description">Equations will automatically be checked as soon as enough digits have been entered.</string>
    <string name="sound">Sound</string>
    <string name="sound_description">Enable / Disable Sounds</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_description">Enable / Disable Vibrations</string>
    <string name="account">Account</string>
    <string name="account_description">Sign in or create an account to sync data</string>
    <string name="reset">Reset</string>
    <string name="reset_description">Reset all stored game data</string>
    <string name="button_share">SHARE</string>
    <string name="button_home">HOME</string>
    <string name="perfect">Perfect</string>
    <string name="timer_background">88:88:888</string>
    <string name="timer">12:13:145</string>
    <string name="timer_title">Time Taken:</string>
    <string name="round_details">3</string>
    <string name="round">Total Rounds</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="incorrect_description">A cross indicating incorrect</string>
    <string name="timer_description">A stopwatch indicating a timer</string>
    <string name="milli_second">121</string>
    <string name="seconds">12</string>
    <string name="custom_time">Time per Question</string>
    <string name="custom_question">Questions per Round</string>
    <string name="custom_round">Number of Rounds</string>
</resources>