<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_results"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/orange_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:background="@drawable/bg_full"
        app:layout_constraintBottom_toTopOf="@id/cl_guideline_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/cl_guideline_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:rotation="0"
            android:rotationX="0"
            android:rotationY="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_title_two"
            app:layout_constraintVertical_bias="0.66">

            <TextView
                android:id="@+id/tv_timer_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue_dark"
                android:fontFamily="@font/segment_7"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/timer_background"
                android:textColor="@color/black"
                android:textSize="62sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segment_7"
                android:paddingEnd="10dp"
                android:text="@string/timer"
                android:textColor="@color/blue"
                android:textSize="62sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_timer_background"
                app:layout_constraintEnd_toEndOf="@id/tv_timer_background"
                app:layout_constraintTop_toTopOf="@id/tv_timer_background" />

            <TextView
                android:id="@+id/tv_timer_tile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/timer_title"
                android:textColor="@color/black"
                android:textSize="16.0sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_timer_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_round_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_details"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/cl_guideline_six"
            app:layout_constraintTop_toTopOf="@id/tv_round" />

        <TextView
            android:id="@+id/tv_questions_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_details"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/cl_guideline_six"
            app:layout_constraintTop_toTopOf="@id/tv_questions" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            app:srcCompat="@drawable/ic_logo" />

        <View
            android:id="@+id/v_title"
            style="@style/horizontal_line"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <View
            android:id="@+id/v_title_two"
            style="@style/horizontal_line"
            android:layout_marginTop="2.0dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_title" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="36.0sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@id/iv_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="15.0dip"
            android:text="@string/round"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_title_two" />

        <TextView
            android:id="@+id/tv_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/questions"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_round" />

        <TextView
            android:id="@+id/tv_incorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/incorrect"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_questions" />

        <TextView
            android:id="@+id/tv_incorrect_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/incorrect_details"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_questions_details"
            app:layout_constraintTop_toBottomOf="@id/tv_questions_details" />

        <TextView
            android:id="@+id/tv_perfect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.0dip"
            android:layout_marginTop="10dp"
            android:text="@string/perfect"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@id/tv_incorrect_details"
            app:layout_constraintTop_toBottomOf="@id/tv_questions_details" />

        <TextView
            android:id="@+id/tv_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/accuracy"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_incorrect" />

        <TextView
            android:id="@+id/tv_accuracy_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/accuracy_details"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tv_incorrect_details"
            app:layout_constraintTop_toBottomOf="@id/tv_incorrect_details" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_statistics"
        style="@style/custom_button"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:drawableStart="@drawable/ic_statistic"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/button_statistic"
        app:layout_constraintBottom_toTopOf="@id/btn_home"
        app:layout_constraintEnd_toStartOf="@id/cl_guideline_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cl_guideline_four" />

    <Button
        android:id="@+id/btn_play"
        style="@style/custom_button"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:drawableStart="@drawable/ic_play"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/button_play"
        app:layout_constraintBottom_toTopOf="@id/btn_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/cl_guideline_five"
        app:layout_constraintTop_toTopOf="@id/cl_guideline_four" />

    <Button
        android:id="@+id/btn_home"
        style="@style/custom_button"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:drawableStart="@drawable/ic_home"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/button_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cl_guideline_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_statistics" />

    <Button
        android:id="@+id/btn_share"
        style="@style/custom_button"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:drawableStart="@drawable/ic_share"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/button_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/cl_guideline_five"
        app:layout_constraintTop_toBottomOf="@id/btn_play" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cl_guideline_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6607387" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cl_guideline_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>